fix: Fix the black background behind name and date of review

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ img, embed, object, video {
 
 body, td, th, p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
+  font-size: 11pt;
   color: #333;
   line-height: 1.5;
 }
@@ -266,6 +266,7 @@ nav h1 a {
 #restaurant-img {
   width: 100%;
   border-radius: 10% 0 10% 0;
+  align-self: center;
 }
 
 #restaurant-address {
@@ -289,7 +290,12 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 15px 30px;
+  padding: 140px 0 30px;
+}
+
+#restaurant-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 #reviews-container {
@@ -311,7 +317,6 @@ nav h1 a {
 
 #reviews-list li {
   background-color: #fff;
-  background: linear-gradient(0deg, #fff 80%, #000 20%);
   border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
@@ -321,6 +326,18 @@ nav h1 a {
   position: relative;
   width: calc(100% - 45px);
   border-radius: 10% 0 10% 0;
+  z-index: 1;
+}
+
+#reviews-list li:before{
+    position:absolute;
+    z-index:-1;
+    top:0;
+    left:0;
+    width:100%;
+    height:70px;
+    content:"";
+    background-color: #000;
 }
 
 #reviews-list li p {
@@ -349,17 +366,16 @@ nav h1 a {
   font-size: 12pt;
   background: orange;
   width: 100px;
-  top: 30px;
-  margin-top: 40px;
+  margin-top: 70px;
   text-transform: uppercase;
   text-align: center;
   font-weight: bold;
   border-radius: 3px;
 }
-
+#restaurant-c
 #reviews-list li p:nth-child(4) {
-  margin-top: 40px;
-  font-size: 10pt;
+  margin-top: 30px;
+  font-size: 11pt;
 }
 
 #restaurant-hours td {
@@ -367,6 +383,10 @@ nav h1 a {
 }
 
 @media screen and (min-width: 400px) {
+  body, td, th, p {
+    font-size: 12pt;
+  }
+
   #reviews-list li {
     background: linear-gradient(0deg, #fff 87%, #000 13%);
   }
@@ -400,6 +420,29 @@ nav h1 a {
 	#restaurants-list li {
 		width: calc(50% - 50px);
 	}
+}
+
+@media screen and (min-width: 950px) {
+  #restaurant-name {
+    order: 0;
+    width: 100%;
+  }
+  #restaurant-img {
+    order: 1;
+    width: 60%;
+    margin-right: 20px;
+  }
+  #restaurant-info {
+    order: 2;
+    width: 30%;
+  }
+  #restaurant-cuisine {
+    order: 3;
+    width: 60%;
+  }
+  * {
+    order: 20;
+  }
 }
 
 @media screen and (min-width: 1200px) {
